# bus-ui

./: Cargo.toml  index.html  styles.css
src/: main.rs  router.rs
src/components/: mod.rs
src/components/pages/: location.rs
src/components/union/: custom_form.rs
src/components/unit/: list_elements.rs  main_title.rs  mod.rs  ordered_list.rs  password_input.rs  radio_buttons.rs  text_button.rs  text_input.rs  unordered_list.rs
src/stores/: user_store.rs
