[package]
name = "yew-test"
version = "0.1.0"
edition = "2021"


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew-router = "0.17.0"
yewdux = "0.9.2"
yew-hooks = "0.2.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.34"
gloo = "0.8.0"
reqwest = { version = "0.11.16", features = ["json", "native-tls", "blocking"] }
gloo-net = "0.2.6"
#tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["app"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["app", "clipboard", "notification"] }